--- a/saturn/index.html
+++ b/saturn/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo Exercício Condicional - Validação Números</title>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,6 +17,9 @@
         <button onclick="validarNumero()">Validar</button>
         <p id="mensagem"></p>
     </div>
+
+<script src="script.js"></script>
+
 </body>
 
 </html>
